# tara

./: CMakeLists.txt  package.xml
include/uvc_camera/: camera.h  stereocamera.h  tara_ros.h
launch/: tara_launch.launch
src/: camera.cpp  camera_node.cpp  nodelets.cpp  stereo.cpp  stereo_node.cpp  tara_node.cpp  tara_ros.cpp
src/xunit/: xunit_lib_tara.cpp
